<resources>
    <string name="app_name">Paytusker</string>
    <string name="forgetpassword">Forgot Password?</string>
    <string name="username">Username or Email</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="verification">Verification</string>
    <string name="verificationcode">Enter Your Code</string>
    <string name="dont_have_account">Dont\'t Have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="emailorphone">Sign up with Number or email</string>
    <string name="intro_reg">By signing up, that you agree and understand to our Terms of use &amp; Privacy Policy </string>
    <string name="intro_number_reg">By signing up, that you agree and understand to our Terms of use &amp; Privacy Policy. You will receive an SMS to confirm Your Phone number. sms fee may be apply </string>
    <string name="intro_email_reg">By signing up, that you agree and understand to our Terms of use &amp; Privacy Policy. You will receive an SMS to confirm Your Email. sms fee may be apply </string>
    <string name="available_balance">Available Balance</string>
    <string name="my_activity">My Activity</string>
    <string name="dashboard">Dashboard</string>
    <string name="desposit_amount">Deposit Amount</string>
    <string name="payout_amount">Payout Amount</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="fee">Fee</string>
    <string name="add_note">Add Note</string>
    <string name="dogetest">DOGETEST</string>
    <string name="eur">EUR</string>
    <string name="gbp">GBP</string>
    <string name="usd">USD</string>
    <string name="btctest">BTCTEST</string>
    <string name="money_deposit_success">Money Deposit Successfully!</string>
    <string name="money_trans_success">Money Transferred Successfully</string>
    <string name="money_payout_success">Money Payout Successfully!</string>
    <string name="deposit_money_via">You are about to deposit money via</string>
    <string name="payout_money_via">You are about to payout money via</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="default_wallet">Default Wallet</string>
    <string name="Update_Profile">Update Profile</string>
    <string name="total">Total</string>
    <string name="sending_money">You are sending money to</string>
    <string name="requested_amount">Requested Amount:</string>
    <string name="amount">Amount</string>
    <string name="recipient_address">Recipient Address</string>
    <string name="crypto_transactions_take_moments">* Crypto transactions might take few moments to complete.</string>
    <string name="dogetest_amount_2min">* The amount withdrawn/sent must atleast be 2 DOGETEST.</string>
    <string name="please_keep_atleast_1_DOGETEST">* Please keep atleast 1 DOGETEST for network fees.</string>
    <string name="allowed_8_decimal_places">* Allowed upto 8 decimal places.</string>
    <string name="send_dogetest_to_this_address">* Only Send DOGETEST to this addresss, sending any other coin will result in permanent loss.</string>
    <string name="exchanging_amount">Exchanging USD 2.00 Equivalent To EUR 1.70</string>
    <string name="exchange_amount">Exchange Amount</string>
    <string name="EUR_exchange_rate">Exchange rate 1 USD = 0.85 EUR</string>
</resources>